force-app/main/default/objects/CES_Study_Daily_Report__c/CES_Study_Daily_Report__c.object-meta.xml
<CustomObject>
    <label>CES Study Daily Report</label>
    <nameField>
        <label>CES Study Daily Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CES Study Daily Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>