force-app/main/default/objects/CES_Study_Daily_Report__c/fields/CES_Design_Type__c.field-meta.xml
<CustomField>
    <fullName>CES_Design_Type__c</fullName>
    <label>CES Design Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Retrospective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>