force-app/main/default/objects/CES_Study_Daily_Report__c/fields/CES_Study_Type__c.field-meta.xml
<CustomField>
    <fullName>CES_Study_Type__c</fullName>
    <label>CES Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Study</fullName>
            </value>
            <value>
                <fullName>Sample/Data Acquisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>