force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Clinical_Outsourcing_Representative__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Outsourcing_Representative__c</fullName>
    <label>Clinical Outsourcing Representative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Clinical Outsourcing Associate (GEN)</fullName>
            </value>
            <value>
                <fullName>_Clinical Outsourcing Lead (GEN)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>