force-app/main/default/objects/CES_Study_Daily_Report__c/fields/CSL__c.field-meta.xml
<CustomField>
    <fullName>CSL__c</fullName>
    <label>CSL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Clinical Study Leader (GEN)</fullName>
            </value>
            <value>
                <fullName>Alexis Wistermayer</fullName>
            </value>
            <value>
                <fullName>Ana-Maria Visoiu-Knapp</fullName>
            </value>
            <value>
                <fullName>Dhanesh Patel-External</fullName>
            </value>
            <value>
                <fullName>Ileana Alexander</fullName>
            </value>
            <value>
                <fullName>Jessica D&apos;Antonio</fullName>
            </value>
            <value>
                <fullName>Maria Gurbo-External</fullName>
            </value>
            <value>
                <fullName>Sarah Maitland-Jones-External</fullName>
            </value>
            <value>
                <fullName>Vinh Nuce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>