force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Data_Manager__c.field-meta.xml
<CustomField>
    <fullName>Data_Manager__c</fullName>
    <label>Data Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_FSP Data Manager (GEN)</fullName>
            </value>
            <value>
                <fullName>_Oversight Data Manager (GEN)</fullName>
            </value>
            <value>
                <fullName>_PDM/ODM (GEN)</fullName>
            </value>
            <value>
                <fullName>_Program Data Manager (GEN)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>