force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Date_Concept_Communicated_to_TAPM__c.field-meta.xml
<CustomField>
    <fullName>Date_Concept_Communicated_to_TAPM__c</fullName>
    <label>Date Concept Communicated to TAPM</label>
    <type>Date</type>
</CustomField>