force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Department_Leading_Study__c.field-meta.xml
<CustomField>
    <fullName>Department_Leading_Study__c</fullName>
    <label>Department Leading Study</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECD</fullName>
            </value>
            <value>
                <fullName>TFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>