force-app/main/default/objects/CES_Study_Daily_Report__c/fields/DPR_Presentation__c.field-meta.xml
<CustomField>
    <fullName>DPR_Presentation__c</fullName>
    <label>DPR Presentation</label>
    <type>Date</type>
</CustomField>