force-app/main/default/objects/CES_Study_Daily_Report__c/fields/ECD_Medical_Director__c.field-meta.xml
<CustomField>
    <fullName>ECD_Medical_Director__c</fullName>
    <label>ECD Medical Director</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_ECD Medical Director (GEN)</fullName>
            </value>
            <value>
                <fullName>Aaron Kithcart</fullName>
            </value>
            <value>
                <fullName>Andreja Avbersek</fullName>
            </value>
            <value>
                <fullName>Charles Harris</fullName>
            </value>
            <value>
                <fullName>Cynthia Portal Celhay</fullName>
            </value>
            <value>
                <fullName>Georgios Kalliolias</fullName>
            </value>
            <value>
                <fullName>Jonathan Weyne</fullName>
            </value>
            <value>
                <fullName>Meagan O&apos;Brien</fullName>
            </value>
            <value>
                <fullName>Odelya Pagovich</fullName>
            </value>
            <value>
                <fullName>Oren Levy</fullName>
            </value>
            <value>
                <fullName>Selin Somersan-Karakaya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>