force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Expanded_Synopsis_Approval__c.field-meta.xml
<CustomField>
    <fullName>Expanded_Synopsis_Approval__c</fullName>
    <label>Expanded Synopsis Approval</label>
    <type>Date</type>
</CustomField>