force-app/main/default/objects/CES_Study_Daily_Report__c/fields/f_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>f_Data_Available__c</fullName>
    <label>(f) Data Available</label>
    <type>Date</type>
</CustomField>