force-app/main/default/objects/CES_Study_Daily_Report__c/fields/f_Study_Report_Completed__c.field-meta.xml
<CustomField>
    <fullName>f_Study_Report_Completed__c</fullName>
    <label>(f) Study Report Completed</label>
    <type>Date</type>
</CustomField>