force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Final_Approved_Protocol_FAP__c.field-meta.xml
<CustomField>
    <fullName>Final_Approved_Protocol_FAP__c</fullName>
    <label>Final Approved Protocol (FAP)</label>
    <type>Date</type>
</CustomField>