force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Final_Sample_Shipment_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Sample_Shipment_Received__c</fullName>
    <label>Final Sample Shipment Received</label>
    <type>Date</type>
</CustomField>