force-app/main/default/objects/CES_Study_Daily_Report__c/fields/First_Patient_First_Visit_FPFV__c.field-meta.xml
<CustomField>
    <fullName>First_Patient_First_Visit_FPFV__c</fullName>
    <label>First Patient First Visit (FPFV)</label>
    <type>Date</type>
</CustomField>