force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Initial_Sample_Shipment_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sample_Shipment_Received__c</fullName>
    <label>Initial Sample Shipment Received</label>
    <type>Date</type>
</CustomField>