force-app/main/default/objects/CES_Study_Daily_Report__c/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <label>IP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>