force-app/main/default/objects/CES_Study_Daily_Report__c/fields/IPA_Stage__c.field-meta.xml
<CustomField>
    <fullName>IPA_Stage__c</fullName>
    <label>IPA Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-IPA</fullName>
            </value>
            <value>
                <fullName>Post-IPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>