force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Key_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>Key_Data_Available__c</fullName>
    <label>Key Data Available</label>
    <type>Date</type>
</CustomField>