force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Key_Results_Presented_to_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Key_Results_Presented_to_Stakeholders__c</fullName>
    <label>Key Results Presented (to Stakeholders)</label>
    <type>Date</type>
</CustomField>