force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Last_Patient_Last_Visit_LPLV__c.field-meta.xml
<CustomField>
    <fullName>Last_Patient_Last_Visit_LPLV__c</fullName>
    <label>Last Patient Last Visit (LPLV)</label>
    <type>Date</type>
</CustomField>