force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Number_of_Planned_Patients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Planned_Patients__c</fullName>
    <label>Number of Planned Patients</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>