force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Number_of_Planned_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Planned_Sites__c</fullName>
    <label>Number of Planned Sites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>