force-app/main/default/objects/CES_Study_Daily_Report__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <label>POL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Program Operations Leader (GEN)</fullName>
            </value>
            <value>
                <fullName>Amy Harman</fullName>
            </value>
            <value>
                <fullName>Daya Gulabani</fullName>
            </value>
            <value>
                <fullName>Jaclyn Patterson</fullName>
            </value>
            <value>
                <fullName>Keri Aitchison</fullName>
            </value>
            <value>
                <fullName>Paula Harding</fullName>
            </value>
            <value>
                <fullName>Shaun Langdon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>