force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Precision_Medicine_Operations__c.field-meta.xml
<CustomField>
    <fullName>Precision_Medicine_Operations__c</fullName>
    <label>Precision Medicine Operations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Precision Medicine Operations (GEN)</fullName>
            </value>
            <value>
                <fullName>Lisa Hersh</fullName>
            </value>
            <value>
                <fullName>Michel Tarabocchia</fullName>
            </value>
            <value>
                <fullName>Rachid Hamid</fullName>
            </value>
            <value>
                <fullName>Shiwani Tiwari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>