force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Precision_Medicine_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Precision_Medicine_Scientist__c</fullName>
    <label>Precision Medicine Scientist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Precision Medicine Scientist (GEN)</fullName>
            </value>
            <value>
                <fullName>Ana Gonzalez Ortiz</fullName>
            </value>
            <value>
                <fullName>Andrea Hooper</fullName>
            </value>
            <value>
                <fullName>Anita Boyapati</fullName>
            </value>
            <value>
                <fullName>Claire Wang</fullName>
            </value>
            <value>
                <fullName>Jennifer Hamilton</fullName>
            </value>
            <value>
                <fullName>Karoline Meagher</fullName>
            </value>
            <value>
                <fullName>Kerry Casey</fullName>
            </value>
            <value>
                <fullName>Poulabi Banerjee</fullName>
            </value>
            <value>
                <fullName>Satyajit Karnik</fullName>
            </value>
            <value>
                <fullName>Vladimir Jankovic</fullName>
            </value>
            <value>
                <fullName>Xiping Cheng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>