force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Research_Plan_Approved__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan_Approved__c</fullName>
    <label>Research Plan Approved</label>
    <type>Date</type>
</CustomField>