force-app/main/default/objects/CES_Study_Daily_Report__c/fields/RPR_Meeting_Conducted__c.field-meta.xml
<CustomField>
    <fullName>RPR_Meeting_Conducted__c</fullName>
    <label>RPR Meeting Conducted</label>
    <type>Date</type>
</CustomField>