force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Site_Ready__c.field-meta.xml
<CustomField>
    <fullName>Site_Ready__c</fullName>
    <label>Site Ready</label>
    <type>Date</type>
</CustomField>