force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Study_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Study_Nickname__c</fullName>
    <label>Study Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>