force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Study_Number__c.field-meta.xml
<CustomField>
    <fullName>Study_Number__c</fullName>
    <label>Study Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>