force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Study_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Study_Sponsor__c</fullName>
    <label>Study Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Regeneron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>