force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Study_Status_COMPASS__c.field-meta.xml
<CustomField>
    <fullName>Study_Status_COMPASS__c</fullName>
    <label>Study Status (COMPASS)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Endorsed Scenario</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>