force-app/main/default/objects/CES_Study_Daily_Report__c/fields/TAPM__c.field-meta.xml
<CustomField>
    <fullName>TAPM__c</fullName>
    <label>TAPM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hemant Patel</fullName>
            </value>
            <value>
                <fullName>Laura Capicchioni</fullName>
            </value>
            <value>
                <fullName>Nicole Dossin</fullName>
            </value>
            <value>
                <fullName>Samantha Dickon</fullName>
            </value>
            <value>
                <fullName>Somang Kim</fullName>
            </value>
            <value>
                <fullName>Tanya Klein</fullName>
            </value>
            <value>
                <fullName>Tatanisha Rodgers-Laguerre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>