force-app/main/default/objects/CES_Study_Daily_Report__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Cardiovascular and Metabolism</fullName>
            </value>
            <value>
                <fullName>General Medicine_Metabolic and Muscle Disease</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Immunology and Inflammation</fullName>
            </value>
            <value>
                <fullName>Immuno-Oncology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Muscular Metabolism</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Skeletal</fullName>
            </value>
            <value>
                <fullName>(No T.A.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>